Update new stuff

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,13 +20,12 @@
     <form id="send-push__form">
         <h3 class="header">Send a push notification</h3>
         <p class="error"></p>
-        <input type="text" name="head" placeholder="Your favorite airline 😍">
-        <textarea name="body" id="" cols="30" rows="10" placeholder="Your flight has been cancelled 😱😱😱"></textarea>
+        <input type="text" name="head" placeholder="Header: Your favorite airline 😍">
+        <textarea name="body" id="" cols="30" rows="10" placeholder="Body: Your flight has been cancelled 😱😱😱"></textarea>
         <button>Send Me</button>
     </form>
 </div>
-</body>
 <script src="{% static '/js/registerSw.js' %}"></script>
 <script src="{% static '/js/site.js' %}"></script>
-
+</body>
 </html>
